[package]
name = "libeverdrive"
description = "libeverdrive is a library for programming everdrive through usb development port"
repository = "https://github.com/fakelag/libeverdrive"
version = "0.0.1"
license = "MIT"
edition = "2024"
authors = ["fakelag"]

[dependencies]
bmp = { version = "0.5.0", optional = true }
serialport = "4.7.0"

[features]
default = []
bitmap = ["bmp"]
